<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".ui.view.auth.signUp.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.23" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.77" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_marginTop="@dimen/iconTopMargin"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/brand_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/iconStartMargin"
                    android:layout_marginTop="@dimen/veryLargeMargin"
                    android:layout_marginEnd="@dimen/iconStartMargin"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/userNameSignUp"
                    android:textColor="@color/brand_color"
                    android:textSize="@dimen/normal_text_size" />
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_user_name"
                    style="@style/edit_text"
                    android:layout_marginStart="@dimen/iconStartMargin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/iconStartMargin"
                    android:background="@drawable/edit_text_background"
                    android:fontFamily="@font/nunito_light"
                    android:hint="Abc"
                    android:inputType="textPersonName"
                    android:textColor="@color/sub_header_text_color"
                    android:textSize="@dimen/edit_text_size" />



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/iconStartMargin"
                    android:layout_marginTop="@dimen/header_text_top_margin"
                    android:layout_marginEnd="@dimen/iconStartMargin"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/userEmailSignUp"
                    android:textColor="@color/brand_color"
                    android:textSize="@dimen/normal_text_size" />
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_user_email"
                    style="@style/edit_text"
                    android:layout_marginStart="@dimen/iconStartMargin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/iconStartMargin"
                    android:background="@drawable/edit_text_background"
                    android:fontFamily="@font/nunito_light"
                    android:hint="exam@gmail.com"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/sub_header_text_color"
                    android:textSize="@dimen/edit_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/iconStartMargin"
                    android:layout_marginTop="@dimen/header_text_top_margin"
                    android:layout_marginEnd="@dimen/iconStartMargin"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/passwordSignUp"
                    android:textColor="@color/sub_header_text_color"
                    android:textSize="@dimen/normal_text_size" />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ll_pin"
                    style="@style/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/iconStartMargin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/iconStartMargin"
                    android:background="@drawable/edit_text_background">


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_pin"
                        style="@style/edit_text"
                        android:layout_width="0dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/nunito_light"
                        android:inputType="textPassword"
                        android:hint="Abc123@#(Minimum 8 Character)"
                        android:textColor="@color/sub_header_text_color"
                        android:textSize="@dimen/edit_text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/iv_pin_visibility"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_pin_visibility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/largeMargin"
                        android:src="@drawable/password_visibility"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/et_pin"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/iconStartMargin"
                    android:layout_marginTop="@dimen/header_text_top_margin"
                    android:layout_marginEnd="@dimen/iconStartMargin"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/confirmPasswordSignUp"
                    android:textColor="@color/sub_header_text_color"
                    android:textSize="@dimen/normal_text_size" />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ll_pin_confirm"
                    style="@style/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/iconStartMargin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/iconStartMargin"
                    android:background="@drawable/edit_text_background">


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_pin_confirm"
                        style="@style/edit_text"
                        android:layout_width="0dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/nunito_light"
                        android:inputType="textPassword"
                        android:hint="Abc123@#(Minimum 8 Character)"
                        android:textColor="@color/sub_header_text_color"
                        android:textSize="@dimen/edit_text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/iv_pin_visibility_confirm"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_pin_visibility_confirm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/largeMargin"
                        android:src="@drawable/password_visibility"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/et_pin_confirm"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_create_account"
                style="@style/custom_button"
                android:layout_width="0dp"
                android:layout_marginStart="@dimen/iconStartMargin"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="@dimen/iconStartMargin"
                android:layout_marginBottom="@dimen/btn_bottom_margin"
                android:text="@string/createAccountSignUp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/btnTextSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</ScrollView>