<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.23" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.77" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_logo"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="@dimen/iconTopMargin"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_height"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/appName"
                    android:textColor="@color/header_text_color"
                    android:textSize="@dimen/xxLargeText" />

                <TextView
                    android:id="@+id/login_userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/iconStartMargin"
                    android:layout_marginEnd="@dimen/iconStartMargin"
                    android:layout_marginTop="@dimen/btn_bottom_margin"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/userNameLogin"
                    android:textColor="@color/header_text_color"
                    android:textSize="@dimen/normal_text_size" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_user_name"
                    style="@style/edit_text"
                    android:layout_marginStart="@dimen/iconStartMargin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/iconStartMargin"
                    android:background="@drawable/edit_text_background"
                    android:textColor="@color/sub_header_text_color"
                    android:textSize="@dimen/edit_text_size"
                    android:fontFamily="@font/nunito_light"
                    android:hint="Abc"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/login_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/iconStartMargin"
                    android:layout_marginEnd="@dimen/iconStartMargin"
                    android:layout_marginTop="@dimen/header_text_top_margin"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/passwordLogin"
                    android:textColor="@color/header_text_color"
                    android:textSize="@dimen/normal_text_size" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    style="@style/password_edit_text"
                    android:id="@+id/ll_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/iconStartMargin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/iconStartMargin"
                    android:background="@drawable/edit_text_background">


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_pin"
                        style="@style/edit_text"
                        android:layout_width="0dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/nunito_light"
                        android:textColor="@color/sub_header_text_color"
                        android:textSize="@dimen/edit_text_size"
                        android:hint="Abc123@#"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/iv_pin_visibility"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_pin_visibility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/largeMargin"
                        android:src="@drawable/password_visibility"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/et_pin"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/header_text_top_margin"
                    android:layout_marginEnd="@dimen/iconStartMargin"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/forgotPassLogin"
                    android:textColor="@color/redLight"
                    android:textSize="@dimen/normal_text_size" />

                <LinearLayout
                    android:id="@+id/ll_signup_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/iconTopMargin"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_light"
                        android:text="new_walletmix"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dialog_text_size" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:fontFamily="@font/nunito_light"
                        android:text="sign_up"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/dialog_text_size" />
                </LinearLayout>


            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                style="@style/custom_button"
                android:layout_width="0dp"
                android:layout_marginStart="@dimen/iconStartMargin"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="@dimen/iconStartMargin"
                android:layout_marginBottom="@dimen/btn_bottom_margin"
                android:gravity="center"
                android:text="@string/buttonLogin"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/btnTextSize"
                android:fontFamily="@font/nunito_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintVertical_bias="1.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:id="@+id/ll_terms_and_conditions"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:paddingVertical="@dimen/xxLargeMargin">

            <!--            <TextView-->
            <!--                android:id="@+id/tv_terms_and_conditions"-->
            <!--                style="@style/regular"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:text="@string/loginTermsAndConditions"-->
            <!--                android:textSize="@dimen/edit_text_size"-->
            <!--                android:fontFamily="@font/nunito_light"-->
            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                app:layout_constraintEnd_toStartOf="@id/tv_pipe"-->
            <!--                app:layout_constraintHorizontal_chainStyle="packed"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="parent" />-->

            <!--            <TextView-->
            <!--                android:id="@+id/tv_pipe"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginHorizontal="@dimen/mediumMargin"-->
            <!--                android:text="Pipe"-->
            <!--                android:textSize="@dimen/edit_text_size"-->
            <!--                app:layout_constraintBottom_toBottomOf="@id/tv_terms_and_conditions"-->
            <!--                app:layout_constraintEnd_toStartOf="@id/tv_privacy_policy"-->
            <!--                app:layout_constraintStart_toEndOf="@id/tv_terms_and_conditions"-->
            <!--                app:layout_constraintTop_toTopOf="@id/tv_terms_and_conditions" />-->

            <!--            <TextView-->
            <!--                android:id="@+id/tv_privacy_policy"-->
            <!--                style="@style/regular"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:text="Privacy Policy"-->
            <!--                android:textSize="@dimen/edit_text_size"-->
            <!--                android:fontFamily="@font/nunito_light"-->
            <!--                app:layout_constraintBottom_toBottomOf="@id/tv_terms_and_conditions"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintStart_toEndOf="@id/tv_pipe"-->
            <!--                app:layout_constraintTop_toTopOf="@id/tv_terms_and_conditions" />-->
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>